:sparkles: add logger middleware
